--- a/Demo/View/PageCanvas.xaml
+++ b/Demo/View/PageCanvas.xaml
@@ -4,7 +4,6 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MvvmLight1.View"
-      xmlns:UICommon="clr-namespace:UICommon.Controls;assembly=UICommon"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
      >
@@ -14,9 +13,7 @@
                 Width="{Binding ActualWidth, Mode=Default, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}" 
                 Height="{Binding ActualHeight, Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}">
             <Rectangle Stroke="Red" Fill="Transparent" StrokeThickness="1" 
-                       Width="100" Height="100" Canvas.Left="100" Canvas.Top="100"
-                       UICommon:DragControlHelper.IsEditable="True" UICommon:DragControlHelper.IsSelectable="True"/>
-            <UICommon:DragControlHelper CornerWidth="7"/>
+                       Width="100" Height="100" Canvas.Left="100" Canvas.Top="100"/>
         </Canvas>
     </Grid>
 </UserControl>
