添加退出程序处理程序，去除界面外边框

--- a/Demo/Controls/SampleDialog.xaml
+++ b/Demo/Controls/SampleDialog.xaml
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="0"
                     Margin="0 16 0 0">
-            <TextBlock Text="{Binding ShowString}"/>
+            <TextBlock x:Name="Message"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1"
                     Margin="0 16 0 0">
