--- a/Demo/MainWindow.xaml
+++ b/Demo/MainWindow.xaml
@@ -9,7 +9,10 @@
         mc:Ignorable="d ignore"
         Height="800"
         Width="1100"
-        Title="{DynamicResource MainWindowTitle}"
+        Title="{DynamicResource MainWindowTitle}" 
+        WindowStyle="None" 
+        ResizeMode="NoResize" 
+        WindowStartupLocation="CenterScreen"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -66,14 +69,15 @@
             </materialDesign:DrawerHost.LeftDrawerContent>
             <DockPanel>
                 <materialDesign:ColorZone Padding="16" materialDesign:ShadowAssist.ShadowDepth="Depth2"
-                                            Mode="PrimaryMid" DockPanel.Dock="Top">
+                                            Mode="PrimaryMid" DockPanel.Dock="Top"
+                                          MouseLeftButtonDown="ColorZone_MouseLeftButtonDown">
                     <DockPanel>
                         <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}" IsChecked="False"
                                         x:Name="MenuToggleButton"/>
                         <materialDesign:PopupBox DockPanel.Dock="Right" PlacementMode="BottomAndAlignRightEdges" StaysOpen="False">
                             <StackPanel>
-                                <Button Content="Hello World" Click="MenuPopupButton_OnClick"/>
-                                <Button Content="Nice Popup" Click="MenuPopupButton_OnClick"/>
+                                <Button Content="Minimized" Click="MenuPopupButtonMinimized_OnClick"/>
+                                <Button Content="Maximized" Click="MenuPopupButtonMaximized_OnClick"/>
                                 <Button Content="Can't Touch This" IsEnabled="False" />
                                 <Separator/>
                                 <Button Content="Goodbye" Command="{Binding ClosingCommand}"/>
