--- a/Demo/Resources/Language/zh-TW.xaml
+++ b/Demo/Resources/Language/zh-TW.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="clr-namespace:System;assembly=mscorlib">
-    <s:String x:Key="MainWindowTitle">MVVM實例</s:String>
+    <s:String x:Key="MainWindowTitle">資料設計語言實例</s:String>
     <s:String x:Key="Language">繁體中文</s:String>
     <s:String x:Key="LanguageText">語言</s:String>
     <s:String x:Key="Home">歡迎</s:String>
@@ -11,4 +11,8 @@
 
     <s:String x:Key="Light">淺色</s:String>
     <s:String x:Key="Dark">深色</s:String>
+    <s:String x:Key="WindowStateMinimized">最小窗口</s:String>
+    <s:String x:Key="WindowStateMaximized">最大窗口</s:String>
+    <s:String x:Key="WindowStateNormal">默認窗口</s:String>
+    <s:String x:Key="Exit">退出程序</s:String>
 </ResourceDictionary>
