--- a/Demo/Resources/Language/en-US.xaml
+++ b/Demo/Resources/Language/en-US.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="clr-namespace:System;assembly=mscorlib">
-    <s:String x:Key="MainWindowTitle">MVVM Demo</s:String>
+    <s:String x:Key="MainWindowTitle">Material Design In XAML Toolkit</s:String>
     <s:String x:Key="Language">English</s:String>
     <s:String x:Key="LanguageText">Language</s:String>
     <s:String x:Key="Home">Welcome</s:String>
@@ -11,4 +11,8 @@
 
     <s:String x:Key="Light">Light</s:String>
     <s:String x:Key="Dark">Dark</s:String>
+    <s:String x:Key="WindowStateMinimized">minimum window</s:String>
+    <s:String x:Key="WindowStateMaximized">Maximum window</s:String>
+    <s:String x:Key="WindowStateNormal">Default Window</s:String>
+    <s:String x:Key="Exit">Exit Program</s:String>
 </ResourceDictionary>
