--- a/Demo/Resources/Language/zh-CN.xaml
+++ b/Demo/Resources/Language/zh-CN.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="clr-namespace:System;assembly=mscorlib">
-    <s:String x:Key="MainWindowTitle">MVVM实例wwww</s:String>
+    <s:String x:Key="MainWindowTitle">材料设计语言实例</s:String>
     <s:String x:Key="Language">简体中文</s:String>
     <s:String x:Key="LanguageText">语言</s:String>
     <s:String x:Key="Home">欢迎</s:String>
@@ -11,4 +11,8 @@
     
     <s:String x:Key="Light">浅色</s:String>
     <s:String x:Key="Dark">深色</s:String>
+    <s:String x:Key="WindowStateMinimized">最小窗口</s:String>
+    <s:String x:Key="WindowStateMaximized">最大窗口</s:String>
+    <s:String x:Key="WindowStateNormal">默认窗口</s:String>
+    <s:String x:Key="Exit">退出程序</s:String>
 </ResourceDictionary>
