--- a/Demo/Controls/RectangleControl.xaml
+++ b/Demo/Controls/RectangleControl.xaml
@@ -8,20 +8,19 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <Style TargetType="{x:Type Thumb}" x:Key="CornerThumbStyle">
-            <Setter Property="Width" Value="5"/>
-            <Setter Property="Height" Value="5"/>
+            <Setter Property="Width" Value="13"/>
+            <Setter Property="Height" Value="13"/>
             <Setter Property="BorderBrush" Value="{Binding BorderBrush, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}"/>
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="Background" Value="Red"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Thumb}">
-                        <Border SnapsToDevicePixels="True"
+                        <Ellipse SnapsToDevicePixels="True"
                                     Width="{TemplateBinding Width}" 
 						            Height="{TemplateBinding Height}"
-						            Background="{TemplateBinding Background}" 
-						            BorderBrush="{TemplateBinding BorderBrush}"
-						            BorderThickness="{TemplateBinding BorderThickness}"/>
+                                  Fill="Green"
+                                 StrokeThickness="{TemplateBinding BorderThickness}"/>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -36,7 +35,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Thumb}">
                         <Rectangle Margin="0" Fill="Transparent" SnapsToDevicePixels="True"
-                                       Stroke="Red" StrokeDashArray="2.0 2.0" Stretch="Fill"
+                                       Stroke="Green" StrokeDashArray="2.0 2.0" Stretch="Fill"
                                        StrokeThickness="1"/>
                     </ControlTemplate>
                 </Setter.Value>
@@ -60,16 +59,16 @@
                 Width="{Binding RelativeSource={RelativeSource   Mode= FindAncestor,  AncestorType={x:Type local:RectangleControl}}, Path=RectWidth}"
                    Height="{Binding RelativeSource={RelativeSource   Mode= FindAncestor,  AncestorType={x:Type local:RectangleControl}}, Path=RectHeight}"/>
 
-        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left"   VerticalAlignment="Top"    Cursor="SizeNWSE"/>
-        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top"    Cursor="SizeNS"/>
-        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"  VerticalAlignment="Top"    Cursor="SizeNESW"/>
+        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left"   VerticalAlignment="Top" Margin="-6"   Cursor="SizeNWSE"/>
+        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="-6"  Cursor="SizeNS"/>
+        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right"  VerticalAlignment="Top" Margin="-6"  Cursor="SizeNESW"/>
 
-        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left"   VerticalAlignment="Center" Cursor="SizeWE"/>
-        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right"  VerticalAlignment="Center" Cursor="SizeWE"/>
+        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left"   VerticalAlignment="Center" Margin="-6" Cursor="SizeWE"/>
+        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right"  VerticalAlignment="Center" Margin="-6" Cursor="SizeWE"/>
 
-        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left"   VerticalAlignment="Bottom" Cursor="SizeNESW"/>
-        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Cursor="SizeNS"/>
-        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="2" Grid.Column="2" HorizontalAlignment="Right"  VerticalAlignment="Bottom" Cursor="SizeNWSE"/>
+        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left"   VerticalAlignment="Bottom" Margin="-6" Cursor="SizeNESW"/>
+        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="-6" Cursor="SizeNS"/>
+        <Thumb Style="{StaticResource CornerThumbStyle}" DragDelta="Thumb_DragDelta" DragStarted="Thumb_DragStarted" DragCompleted="Thumb_DragCompleted"  Grid.Row="2" Grid.Column="2" HorizontalAlignment="Right"  VerticalAlignment="Bottom" Margin="-6" Cursor="SizeNWSE"/>
 
     </Grid>
 </UserControl>
