--- a/Demo/View/Vision.xaml
+++ b/Demo/View/Vision.xaml
@@ -24,27 +24,18 @@
 
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="50" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="50" />
-        </Grid.RowDefinitions>
 
-        <!--<Image Name="image1" Stretch="Fill"   Grid.Row="1" Grid.Column="1" Source="{Binding ImgSourc}"  />-->
-        <materialDesign:Card Grid.Row="1" Grid.Column="1"  >
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="auto" />
-                </Grid.RowDefinitions>
-                <ToolBarTray HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+    <!--<Image Name="image1" Stretch="Fill"   Grid.Row="1" Grid.Column="1" Source="{Binding ImgSourc}"  />-->
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+        
+        <!--<ToolBarTray HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <ToolBar>
                         <Button ToolTip="连续读取" Command="{Binding OpenCameraCmd}">
                             <materialDesign:PackIcon Kind="ArrowRightDropCircle" />
@@ -63,19 +54,10 @@
                         </Button>
                     </ToolBar>
 
-                </ToolBarTray>
-                
-                <materialDesign:PopupBox
-				Padding="2,0,2,0"
-				HorizontalAlignment="Right"
-				Style="{StaticResource MaterialDesignToolForegroundPopupBox}">
-                    <StackPanel>
-                        <Button Content="LoadImg" Command="{Binding SourcePathCmd}" />
-                        <Button Content="Options" />
-                    </StackPanel>
-                </materialDesign:PopupBox>
+                </ToolBarTray>-->
 
-                <!--<Canvas Grid.Row ="1"  Focusable="True" Name="myCanvas"
+
+        <!--<Canvas Grid.Row ="1"  Focusable="True" Name="myCanvas"
                 Width="{Binding ActualWidth, Mode=Default, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}" 
                 Height="{Binding ActualHeight, Mode=Default, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}">
                     <Canvas.Background>
@@ -83,32 +65,32 @@
                     </Canvas.Background>
                 </Canvas>-->
 
-                <ItemsControl Grid.Row ="1" ItemsSource="{Binding CanvasRectangle}" Width="640" Height="480">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <Canvas >
-                                <Canvas.Background>
-                                    <ImageBrush ImageSource="{Binding ImgSourc}" />
-                                </Canvas.Background>
-                            </Canvas>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <myc:RectangleControl >
-                                
-                            </myc:RectangleControl>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <!--<ItemsControl.ItemContainerStyle>
+        <ItemsControl Grid.Row ="1" ItemsSource="{Binding CanvasRectangle}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas >
+                        <Canvas.Background>
+                            <ImageBrush ImageSource="{Binding ImgSourc}" />
+                        </Canvas.Background>
+                    </Canvas>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <myc:RectangleControl >
+
+                    </myc:RectangleControl>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <!--<ItemsControl.ItemContainerStyle>
                         <Style>
                             <Setter Property="Canvas.Left" Value="{Binding X}" />
                             <Setter Property="Canvas.Top" Value="{Binding Y}" />
                         </Style>
                     </ItemsControl.ItemContainerStyle>-->
-                </ItemsControl>
+        </ItemsControl>
 
-                <!--<ItemsControl Grid.Row="1" ItemsSource="{Binding CanvasVecPicture}" Width="640" Height="480" Margin="0"  >
+        <!--<ItemsControl Grid.Row="1" ItemsSource="{Binding CanvasVecPicture}" Width="640" Height="480" Margin="0"  >
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <Canvas >
@@ -130,29 +112,53 @@
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>-->
-
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch"  Grid.Row="2">
-                    <!--<TextBlock Text="{Binding SelectPath.Translate.X,StringFormat='##0.00'}"  Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        
+        <materialDesign:PopupBox Style="{StaticResource MaterialDesignMultiFloatingActionPopupBox}"
+                                 HorizontalAlignment="Right" VerticalAlignment="Bottom" 
+                                 Margin="32" Grid.Row="1">
+            <StackPanel>
+                
+                <Button ToolTip="连续读取" Command="{Binding OpenCameraCmd}">
+                    <materialDesign:PackIcon Kind="ArrowRightDropCircle" />
+                </Button>
+                <Button ToolTip="特征匹配读取" Command="{Binding MatchTemplateCmd}">
+                    <materialDesign:PackIcon Kind="ArrowRightBold" />
+                </Button>
+                <Button ToolTip="停止读取" Command="{Binding StopCameraCmd}">
+                    <materialDesign:PackIcon Kind="StopCircle" />
+                </Button>
+                <Button ToolTip="添加区域框" Command="{Binding AddPathCmd}">
+                    <materialDesign:PackIcon Kind="PlusCircle" />
+                </Button>
+                <Button ToolTip="感兴趣区域" Command="{Binding RoiCmd}" >
+                    <materialDesign:PackIcon Kind="ArrangeBringForward" />
+                </Button>
+                <Button ToolTip="打开图片" Command="{Binding SourcePathCmd}" >
+                    <materialDesign:PackIcon Kind="FolderOpen" />
+                </Button>
+            </StackPanel>
+        </materialDesign:PopupBox>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Row="1">
+            <!--<TextBlock Text="{Binding SelectPath.Translate.X,StringFormat='##0.00'}"  Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     <TextBlock Text=","  Margin="0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     <TextBlock Text="{Binding SelectPath.Translate.Y,StringFormat='##0.00'}" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
                     <TextBlock Text="{Binding SelectPath.MyGeometry.Rect.Width,StringFormat='##0.00'}"  Margin="20,5,5,5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     <TextBlock Text="x"  Margin="0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     <TextBlock Text="{Binding SelectPath.MyGeometry.Rect.Height,StringFormat='##0.00'}" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>-->
-                    <TextBox Text="{Binding SelectPath.RectX,StringFormat='##0.00'}"  Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBlock Text=","  Margin="0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBox Text="{Binding SelectPath.RectY,StringFormat='##0.00'}" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBlock FontWeight="Bold" Text="{Binding SelectPath.RectX,StringFormat='##0.00'}"  Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBlock FontWeight="Bold"  Text=","  Margin="0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBlock FontWeight="Bold"  Text="{Binding SelectPath.RectY,StringFormat='##0.00'}" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
-                    <TextBox Text="{Binding SelectPath.RectWidth,StringFormat='##0.00'}"  Margin="20,5,5,5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBlock Text="x"  Margin="0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBox Text="{Binding SelectPath.RectHeight,StringFormat='##0.00'}" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBlock FontWeight="Bold"  Text="{Binding SelectPath.RectWidth,StringFormat='##0.00'}"  Margin="20,5,5,5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBlock FontWeight="Bold"  Text="x"  Margin="0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBlock FontWeight="Bold"  Text="{Binding SelectPath.RectHeight,StringFormat='##0.00'}" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
 
-                </StackPanel>
-                <Image Grid.Row="1" MaxWidth="160" MaxHeight="120" HorizontalAlignment="Right" VerticalAlignment="Top" Source="{Binding RoiSourc}"></Image>
-                
-            </Grid>
-        </materialDesign:Card>
-        
+        </StackPanel>
+        <Image Grid.Row="1" MaxWidth="160" MaxHeight="120" HorizontalAlignment="Right" VerticalAlignment="Top" Source="{Binding RoiSourc}"></Image>
+
     </Grid>
+
+
 </UserControl>
